required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

Version 5.0.0-beta5 (2007-08-22)
--------------------------------

- Fixed XSS vulnerabilities (#2256)

- Allow building with AGG from source when libaggfontfreetype is missing.
  configure --with-agg=DIR now automatically tries to build 
  agg_font_freetype.o from source if libaggfontfreetype is missing (#2215)

- Fixed possible buffer overflow in template processing (#2252)

- fix blending of transparent layers with RGBA images

- AGG: speed up rendering of pixmap marker symbols

- Implement OGR thread-safety via use of an OGR lock (#1977).

- Fixed compile warnings (#2226)

- Fixed mappdf.c compile warnings, PDF support was probably unusable
  before that fix (#2251)

- Adding -DUSE_GENERIC_MS_NINT to the WIN64 builds (#2250)

- Adding msSaveImageBuffer and use that function from the mapscript
  library instead of the renderer specific functions. (#2241)

- Split each format into it's own <formats> element in WCS describe
  coverage results (#2244).

- Support to run the mapscript c# examples on x64 platform (#2240)

- Fixed problem introduced in 5.0.0-beta4: all HTML legend icons were
  empty white images (#2243)

- Fixed WMS Client to always send STYLES parameter with WMS GetMap
  requests (#2242)

- Fixed support for label encoding in SVG output (#2239)

- Added support for label encoding in legend (#2239)

- Fixed PHP MapScript layer->queryByAttributes() to not accept empty or
  null qitem arg (#480)

- AGG: fixed incorrect rendering of pixmaps on MSB architectures (#2235)

- Added layer.getFeature() in PHP MapScript with optional tileindex arg, 